--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 
     /* Pricelist */
     .pricelist-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 8px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
       justify-content: center;
     }
     .price-box {
+      flex: 0 1 calc(33.33% - 10px);
       background-color: #fff;
       border: 1px solid #ccd6eb;
       border-radius: 10px;
@@ -108,8 +109,8 @@
       border: none;
       border-radius: 8px;
       color: white;
-      font-size: 16px; /* disamakan dengan kategori */
-      font-weight: 700; /* bold */
+      font-size: 13px;
+      font-weight: 600;
       cursor: pointer;
       transition: 0.2s;
     }
@@ -128,7 +129,7 @@
 
   <!-- Robux Reguler -->
   <div class="category">
-    <h3>ROBUX REGULER</h3>
+    <h3>ROBUX REGULER - FAST<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('80 Robux','15000','Reguler')">80 Robux<span>Rp15.000</span></div>
       <div class="price-box" onclick="isiForm('160 Robux','30000','Reguler')">160 Robux<span>Rp30.000</span></div>
@@ -142,7 +143,6 @@
       <div class="price-box" onclick="isiForm('800 Robux','139000','Reguler')">800 Robux<span>Rp139.000</span></div>
       <div class="price-box" onclick="isiForm('1700 Robux','278000','Reguler')">1.700 Robux<span>Rp278.000</span></div>
       <div class="price-box" onclick="isiForm('2100 Robux','374000','Reguler')">2.100 Robux<span>Rp374.000</span></div>
-      <div class="price-box" onclick="isiForm('5000 Robux','698000','Reguler')">5.000 Robux<span>Rp698.000</span></div>
       <div class="price-box" onclick="isiForm('10000 Robux','1390000','Reguler')">10.000 Robux<span>Rp1.390.000</span></div>
       <div class="price-box" onclick="isiForm('22500 Robux','2780000','Reguler')">22.500 Robux<span>Rp2.780.000</span></div>
     </div>
@@ -150,7 +150,7 @@
 
   <!-- Robux Special -->
   <div class="category">
-    <h3>ROBUX SPECIAL</h3>
+    <h3>ROBUX SPECIAL - FAST<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('500 Robux','74000','Special')">500 Robux<span>Rp74.000</span></div>
       <div class="price-box" onclick="isiForm('1000 Robux','148000','Special')">1.000 Robux<span>Rp148.000</span></div>
@@ -158,16 +158,12 @@
       <div class="price-box" onclick="isiForm('2000 Robux','296000','Special')">2.000 Robux<span>Rp296.000</span></div>
       <div class="price-box" onclick="isiForm('2500 Robux','370000','Special')">2.500 Robux<span>Rp370.000</span></div>
       <div class="price-box" onclick="isiForm('3000 Robux','444000','Special')">3.000 Robux<span>Rp444.000</span></div>
-      <div class="price-box" onclick="isiForm('3500 Robux','518000','Special')">3.500 Robux<span>Rp518.000</span></div>
-      <div class="price-box" onclick="isiForm('4000 Robux','592000','Special')">4.000 Robux<span>Rp592.000</span></div>
-      <div class="price-box" onclick="isiForm('5000 Robux','740000','Special')">5.000 Robux<span>Rp740.000</span></div>
-      <div class="price-box" onclick="isiForm('6000 Robux','882000','Special')">6.000 Robux<span>Rp882.000</span></div>
     </div>
   </div>
 
   <!-- Robux Premium -->
   <div class="category">
-    <h3>ROBUX + PREMIUM</h3>
+    <h3>ROBUX PREMIUM<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('450 Robux + Premium','74000','Premium')">450 Robux + Premium<span>Rp74.000</span></div>
       <div class="price-box" onclick="isiForm('1000 Robux + Premium','148000','Premium')">1.000 Robux + Premium<span>Rp148.000</span></div>
