--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background: #C9DBF0;
+      background: #FFFFF;
       margin: 0;
       padding: 0;
       color: #333;
