--- a/index.html
+++ b/index.html
@@ -257,6 +257,11 @@ function isiForm(nominal, harga, kategori) {
   document.getElementById("nominal").value = nominal;
   document.getElementById("harga").value = "Rp" + new Intl.NumberFormat('id-ID').format(harga);
   document.getElementById("kategori").value = kategori;
+
+  // Auto scroll ke form
+  document.querySelector(".form-container").scrollIntoView({
+    behavior: "smooth"
+  });
 }
 
 // V2L logic
