--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <!-- Robux Reguler -->
   <div class="category">
-    <h3>ROBUX REGULER - FAST<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
+    <h3>ROBUX REGULER<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('80 Robux','15000','Reguler')">80 Robux<span>Rp15.000</span></div>
       <div class="price-box" onclick="isiForm('160 Robux','30000','Reguler')">160 Robux<span>Rp30.000</span></div>
@@ -170,7 +170,7 @@
 
   <!-- Robux Special -->
   <div class="category">
-    <h3>ROBUX SPECIAL - FAST<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
+    <h3>ROBUX SPECIAL<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('500 Robux','74000','Special')">500 Robux<span>Rp74.000</span></div>
       <div class="price-box" onclick="isiForm('1000 Robux','148000','Special')">1.000 Robux<span>Rp148.000</span></div>
@@ -193,7 +193,7 @@
       <div class="price-box" onclick="isiForm('1000 Robux + Premium','148000','Premium')">1.000 Robux + Premium<span>Rp148.000</span></div>
       <div class="price-box" onclick="isiForm('1550 Robux + Premium','222000','Premium')">1.550 Robux + Premium<span>Rp222.000</span></div>
       <div class="price-box" onclick="isiForm('2200 Robux + Premium','296000','Premium')">2.200 Robux + Premium<span>Rp296.000</span></div>
-      <div class="price-box" onclick="isiForm('2750 Robux + Premium','367500','Premium')">2.650 Robux + Premium<span>Rp367.500</span></div>
+      <div class="price-box" onclick="isiForm('2750 Robux + Premium','367500','Premium')">2.750 Robux + Premium<span>Rp367.500</span></div>
       <div class="price-box" onclick="isiForm('3300 Robux + Premium','441000','Premium')">3.300 Robux + Premium<span>Rp441.000</span></div>
     </div>
   </div>
