--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="price-box" onclick="isiForm('2200 Robux + Premium','306000','Premium')">2.200 Robux + Premium<span>Rp306.000</span></div>
       <div class="price-box" onclick="isiForm('2750 Robux + Premium','382500','Premium')">2.750 Robux + Premium<span>Rp382.500</span></div>
       <div class="price-box" onclick="isiForm('3300 Robux + Premium','459000','Premium')">3.300 Robux + Premium<span>Rp459.000</span></div>
-      <div class="price-box" onclick="isiForm('11000 Robux + Premium','760000','Premium')">11.000 Robux + Premium<span>Rp760.000</span></div>
+      <div class="price-box" onclick="isiForm('11000 Robux + Premium','1520000','Premium')">11.000 Robux + Premium<span>Rp1.520.000</span></div>
   </div>
   </div>
 
