--- a/index.html
+++ b/index.html
@@ -174,16 +174,18 @@
   <div class="category">
     <h3>ROBUX SPECIAL<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
-      <div class="price-box" onclick="isiForm('500 Robux','77000','Special')">500 Robux<span>Rp77.000</span></div>
-      <div class="price-box" onclick="isiForm('1000 Robux','154000','Special')">1.000 Robux<span>Rp154.000</span></div>
-      <div class="price-box" onclick="isiForm('1500 Robux','231000','Special')">1.500 Robux<span>Rp231.000</span></div>
-      <div class="price-box" onclick="isiForm('2000 Robux','308000','Special')">2.000 Robux<span>Rp308.000</span></div>
-      <div class="price-box" onclick="isiForm('2500 Robux','385000','Special')">2.500 Robux<span>Rp385.000</span></div>
-      <div class="price-box" onclick="isiForm('3000 Robux','462000','Special')">3.000 Robux<span>Rp462.000</span></div>
-      <div class="price-box" onclick="isiForm('3500 Robux','539000','Special')">3.500 Robux<span>Rp539.000</span></div>
-      <div class="price-box" onclick="isiForm('4000 Robux','616000','Special')">4.000 Robux<span>Rp616.000</span></div>
-      <div class="price-box" onclick="isiForm('5000 Robux','770000','Special')">5.000 Robux<span>Rp770.000</span></div>
-      <div class="price-box" onclick="isiForm('6000 Robux','924000','Special')">6.000 Robux<span>Rp924.000</span></div>
+      <div class="price-box" onclick="isiForm('500 Robux','74500','Special')">500 Robux<span>Rp74.500</span></div>
+      <div class="price-box" onclick="isiForm('1000 Robux','149000','Special')">1.000 Robux<span>Rp149.000</span></div>
+      <div class="price-box" onclick="isiForm('1500 Robux','223500','Special')">1.500 Robux<span>Rp223.500</span></div>
+      <div class="price-box" onclick="isiForm('2000 Robux','298000','Special')">2.000 Robux<span>Rp298.000</span></div>
+      <div class="price-box" onclick="isiForm('2500 Robux','372500','Special')">2.500 Robux<span>Rp372.500</span></div>
+      <div class="price-box" onclick="isiForm('3000 Robux','447000','Special')">3.000 Robux<span>Rp447.000</span></div>
+      <div class="price-box" onclick="isiForm('3500 Robux','521500','Special')">3.500 Robux<span>Rp521.500</span></div>
+      <div class="price-box" onclick="isiForm('4000 Robux','596000','Special')">4.000 Robux<span>Rp596.000</span></div>
+      <div class="price-box" onclick="isiForm('5000 Robux','745000','Special')">5.000 Robux<span>Rp745.000</span></div>
+      <div class="price-box" onclick="isiForm('6000 Robux','894000','Special')">6.000 Robux<span>Rp894.000</span></div>
+      <div class="price-box" onclick="isiForm('15000 Robux','2235000','Special')">15.000 Robux<span>Rp2.235.000</span></div
+    
     </div>
   </div>
 
@@ -191,13 +193,13 @@
   <div class="category">
     <h3>ROBUX PREMIUM<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
-      <div class="price-box" onclick="isiForm('450 Robux + Premium','77000','Premium')">450 Robux + Premium<span>Rp77.000</span></div>
-      <div class="price-box" onclick="isiForm('1000 Robux + Premium','154000','Premium')">1.000 Robux + Premium<span>Rp154.000</span></div>
-      <div class="price-box" onclick="isiForm('1550 Robux + Premium','231000','Premium')">1.550 Robux + Premium<span>Rp231.000</span></div>
-      <div class="price-box" onclick="isiForm('2200 Robux + Premium','308000','Premium')">2.200 Robux + Premium<span>Rp308.000</span></div>
-      <div class="price-box" onclick="isiForm('2750 Robux + Premium','385000','Premium')">2.750 Robux + Premium<span>Rp385.000</span></div>
-      <div class="price-box" onclick="isiForm('3300 Robux + Premium','462000','Premium')">3.300 Robux + Premium<span>Rp462.000</span></div>
-      <div class="price-box" onclick="isiForm('11000 Robux + Premium','1540000','Premium')">11.000 Robux + Premium<span>Rp1.540.000</span></div>
+      <div class="price-box" onclick="isiForm('450 Robux + Premium','74500','Premium')">450 Robux + Premium<span>Rp77.000</span></div>
+      <div class="price-box" onclick="isiForm('1000 Robux + Premium','149000','Premium')">1.000 Robux + Premium<span>Rp149.000</span></div>
+      <div class="price-box" onclick="isiForm('1550 Robux + Premium','223500','Premium')">1.550 Robux + Premium<span>Rp223.500</span></div>
+      <div class="price-box" onclick="isiForm('2200 Robux + Premium','298000','Premium')">2.200 Robux + Premium<span>Rp298.000</span></div>
+      <div class="price-box" onclick="isiForm('2750 Robux + Premium','372500','Premium')">2.750 Robux + Premium<span>Rp372.500</span></div>
+      <div class="price-box" onclick="isiForm('3300 Robux + Premium','447000','Premium')">3.300 Robux + Premium<span>Rp447.000</span></div>
+      <div class="price-box" onclick="isiForm('11000 Robux + Premium','1490000','Premium')">11.000 Robux + Premium<span>Rp1.490.000</span></div>
   </div>
   </div>
 
