--- a/index.html
+++ b/index.html
@@ -170,21 +170,21 @@
     </div>
   </div>
 
-  <!-- Robux Special -->
+  <!-- Robux Basic -->
   <div class="category">
-    <h3>ROBUX SPECIAL<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
+    <h3>ROBUX BASIC<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
-      <div class="price-box" onclick="isiForm('500 Robux','74500','Special')">500 Robux<span>Rp74.500</span></div>
-      <div class="price-box" onclick="isiForm('1000 Robux','149000','Special')">1.000 Robux<span>Rp149.000</span></div>
-      <div class="price-box" onclick="isiForm('1500 Robux','223500','Special')">1.500 Robux<span>Rp223.500</span></div>
-      <div class="price-box" onclick="isiForm('2000 Robux','298000','Special')">2.000 Robux<span>Rp298.000</span></div>
-      <div class="price-box" onclick="isiForm('2500 Robux','372500','Special')">2.500 Robux<span>Rp372.500</span></div>
-      <div class="price-box" onclick="isiForm('3000 Robux','447000','Special')">3.000 Robux<span>Rp447.000</span></div>
-      <div class="price-box" onclick="isiForm('3500 Robux','521500','Special')">3.500 Robux<span>Rp521.500</span></div>
-      <div class="price-box" onclick="isiForm('4000 Robux','596000','Special')">4.000 Robux<span>Rp596.000</span></div>
-      <div class="price-box" onclick="isiForm('5000 Robux','745000','Special')">5.000 Robux<span>Rp745.000</span></div>
-      <div class="price-box" onclick="isiForm('6000 Robux','894000','Special')">6.000 Robux<span>Rp894.000</span></div>
-      <div class="price-box" onclick="isiForm('15000 Robux','2235000','Special')">15.000 Robux<span>Rp2.235.000</span></div
+      <div class="price-box" onclick="isiForm('500 Robux','74500','Basic')">500 Robux<span>Rp74.500</span></div>
+      <div class="price-box" onclick="isiForm('1000 Robux','149000','Basic')">1.000 Robux<span>Rp149.000</span></div>
+      <div class="price-box" onclick="isiForm('1500 Robux','223500','Basic')">1.500 Robux<span>Rp223.500</span></div>
+      <div class="price-box" onclick="isiForm('2000 Robux','298000','Basic')">2.000 Robux<span>Rp298.000</span></div>
+      <div class="price-box" onclick="isiForm('2500 Robux','372500','Basic')">2.500 Robux<span>Rp372.500</span></div>
+      <div class="price-box" onclick="isiForm('3000 Robux','447000','Basic')">3.000 Robux<span>Rp447.000</span></div>
+      <div class="price-box" onclick="isiForm('3500 Robux','521500','Basic')">3.500 Robux<span>Rp521.500</span></div>
+      <div class="price-box" onclick="isiForm('4000 Robux','596000','Basic')">4.000 Robux<span>Rp596.000</span></div>
+      <div class="price-box" onclick="isiForm('5000 Robux','745000','Basic')">5.000 Robux<span>Rp745.000</span></div>
+      <div class="price-box" onclick="isiForm('6000 Robux','894000','Basic')">6.000 Robux<span>Rp894.000</span></div>
+      <div class="price-box" onclick="isiForm('15000 Robux','2235000','Basic')">15.000 Robux<span>Rp2.235.000</span></div
     
     </div>
   </div>
