Add new Robux options and update existing ones

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
       <div class="price-box" onclick="isiForm('740 Robux','122000','Reguler')">740 Robux<span>Rp122.000</span></div>
       <div class="price-box" onclick="isiForm('820 Robux','136000','Reguler')">820 Robux<span>Rp136.000</span></div>
       <div class="price-box" onclick="isiForm('1740 Robux','196000','Reguler')">1.740 Robux<span>Rp196.000</span></div>
+      <div class="price-box" onclick="isiForm('10000 Robux','1480000','Reguler')">10.000 Robux<span>Rp1.480.000</span></div>
+      <div class="price-box" onclick="isiForm('22500 Robux','3300000','Reguler')">22.500 Robux<span>Rp3.300.000</span></div>
       </div>
   </div>
 
@@ -177,9 +179,7 @@
       <div class="price-box" onclick="isiForm('4000 Robux','592000','Basic')">4.000 Robux<span>Rp592.000</span></div>
       <div class="price-box" onclick="isiForm('5000 Robux','740000','Basic')">5.000 Robux<span>Rp740.000</span></div>
       <div class="price-box" onclick="isiForm('6000 Robux','888000','Basic')">6.000 Robux<span>Rp888.000</span></div>
-      <div class="price-box" onclick="isiForm('10000 Robux','1480000','Basic')">10.000 Robux<span>Rp1.480.000</span></div
-      <div class="price-box" onclick="isiForm('15000 Robux','2200000','Basic')">15.000 Robux<span>Rp2.220.000</span></div
-      <div class="price-box" onclick="isiForm('22500 Robux','3300000','Basic')">22.500 Robux<span>Rp3.300.000</span></div
+      <div class="price-box" onclick="isiForm('15000 Robux','2220000','Basic')">15.000 Robux<span>Rp2.220.000</span></div
     </div>
   </div>
 
