--- a/index.html
+++ b/index.html
@@ -165,7 +165,12 @@
     <h3>ROBUX BASIC<br><span style="font-weight:400;font-size:12px;">Open 10:00 - 22:00 WIB</span></h3>
     <div class="pricelist-container">
       <div class="price-box" onclick="isiForm('500 Robux','73000','Basic')">500 Robux<span>Rp73.000</span></div>
+      <div class="price-box" onclick="isiForm('580 Robux','88500','Basic')">580 Robux<span>Rp88.500</span></div>
+      <div class="price-box" onclick="isiForm('660 Robux','104000','Basic')">660 Robux<span>Rp104.000</span></div>
+      <div class="price-box" onclick="isiForm('740 Robux','119500','Basic')">740 Robux<span>Rp119.500</span></div>
+      <div class="price-box" onclick="isiForm('820 Robux','134000','Basic')">820 Robux<span>Rp134.000</span></div> 
       <div class="price-box" onclick="isiForm('1000 Robux','146000','Basic')">1.000 Robux<span>Rp146.000</span></div>
+      <div class="price-box" onclick="isiForm('1240 Robux','192500','Basic')">1240 Robux<span>Rp192.500</span></div>
       <div class="price-box" onclick="isiForm('1500 Robux','219000','Basic')">1.500 Robux<span>Rp219.000</span></div>
       <div class="price-box" onclick="isiForm('2000 Robux','292000','Basic')">2.000 Robux<span>Rp292.000</span></div>
       <div class="price-box" onclick="isiForm('2500 Robux','365000','Basic')">2.500 Robux<span>Rp365.000</span></div>
